docs/v7.1/properties/P112.md
---
layout: page
title: P112 a diminué (a été diminué par)
titleEn: P112 diminished (was diminished by) - a diminué (a été diminué par)
permalink: /v7.1/proprietes/P112
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E80 Part Removal</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code></p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E24 Physical Human-Made Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code></p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
<p>E11 Modification. P31 has modified (was modified by): E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E11_Modification</code>. <code class="language-plaintext highlighter-rouge">P31_a_modifié (a_été_modifié_par)</code> : <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>many to many, necessary (1,n:0,n) </p>
</td>
<td>
<p>plusieurs à plusieurs, nécessaire (1,n:0,n)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property identifies the instance E24 Physical Human-Made Thing that was diminished by an instance of E80 Part Removal. </p>
<p>Although an instance of E80 Part removal activity normally concerns only one instance of E24 Physical Human-Made Thing, it is possible to imagine circumstances under which more than one item might be diminished by a single instance of E80 Part Removal activity. </p>
</td>
<td>
<p>Cette propriété identifie l'instance de <code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code> qui a été diminuée par une instance de <code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>.</p>
<p>Bien qu'une instance de <code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code> ne concerne normalement qu'une instance de <code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code>, il est possible d'imaginer des circonstances au cours desquelles plus d'un élément pourrait être diminué par une seule instance de <code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>. </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>the coffin of Tut-Ankh-Amun (E22) <em>was diminished by</em> The opening of the coffin of Tut-AnkhAmun (E80) (Carter, 2014)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Le cercueil de Toutânkhamon (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) a été diminué par (<code class="language-plaintext highlighter-rouge">P112i_a_été_diminué_par</code>) l'ouverture du cercueil de Toutânkhamon (<code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>) (Carter, 2014)  </p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P112(x,y) ⇒ E80(x) </p>
<p>P112(x,y) ⇒ E24(y) </p>
<p>P112(x,y) ⇒ P31(x,y)</p>
</td>
<td>
<p>P112(x,y) ⇒ E80(x) </p>
<p>P112(x,y) ⇒ E24(y) </p>
<p>P112(x,y) ⇒ P31(x,y)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
