docs/v7.1.2/properties/P112.md
---
layout: page
title: P112 a diminué (a été diminué par)
titleEn: P112 diminished (was diminished by) - a diminué (a été diminué par)
permalink: /v7.1.2/proprietes/P112
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E80 Part Removal</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
<p>E11 Modification. P31 has modified (was modified by): E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E11_Modification</code>. <code class="language-plaintext highlighter-rouge">P31_a_modifié (a_été_modifié_par)</code> : <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
<p><code class="language-plaintext highlighter-rouge"></code></p>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many, necessary (1,n:0,n) </p>
</td>
<td>
<p>plusieurs à plusieurs, nécessaire (1,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property identifies the instance of E18 Physical Thing that was diminished by an instance of E80 Part Removal.</p>
<p>Although an instance of E80 Part removal activity normally concerns only one instance of E18 Physical Thing, it is possible to imagine circumstances under which more than one item might be diminished by a single instance of E80 Part Removal activity. </p>
</td>
<td>
<p>Cette propriété identifie l'instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code> qui a été diminuée par une instance de <code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>.Bien qu'une instance de <code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code> ne concerne normalement qu'une instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>, il est possible d'imaginer des circonstances au cours desquelles plus d'un élément pourrait être diminué par une seule instance de <code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>. </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>The coffin of Tut-Ankh-Amun (E22) was diminished by The opening of the coffin of Tut-Ankh-Amun (E80). (Carter, 2014)</p>
</li>
<li><p>The coral of the Cocos Islands (E20) was diminished by The removal of the Porite coral specimen by Charles Darwin (E80). (Natural History Museum, 2010, b)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Le cercueil de Toutânkhamon (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) a été diminué par (<code class="language-plaintext highlighter-rouge">P112i_a_été_diminué_par</code>) l'ouverture du cercueil de Toutânkhamon (<code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>) (Carter, 2014) </p>
</li>
<li><p>Les coraux des îles Cocos (<code class="language-plaintext highlighter-rouge">E20_Objet_biologique</code>) ont été diminués par (<code class="language-plaintext highlighter-rouge">P112i_a_été_diminué_par</code>) le retrait d'un spécimen de porites par Charles Darwin (<code class="language-plaintext highlighter-rouge">E80_Retrait_d’élément</code>) (Natural History Museum, 2010b)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P112(x,y) ⇒ E80(x)</p>
<p>P112(x,y) ⇒ E18(y) </p>
<p>P112(x,y) ⇒ P31(x,y)</p>
</td>
<td>
<p>P112(x,y) ⇒ E80(x) P112(x,y) ⇒ E18(y) P112(x,y) ⇒ P31(x,y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
